# rank_structured_cholesky

./: CMakeLists.txt  README
cmake/: FindCBLAS.cmake  FindCholmod.cmake  FindDeal.II.cmake  FindLAPACKE.cmake  FindMETIS.cmake  FindMKL.cmake
cmake/cmake-modules-master/: CorrectWindowsPaths.cmake  FindFFTW.cmake  FindGSL.cmake  FindGit.cmake  FindITAPS.cmake  FindNetCDF.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  LICENSE  ResolveCompilerPaths.cmake
matlab/: write_sparse_matrix.m
sampleScripts/: darwin-dsb-clang  linux-magma-gcc4.9.3
src/: SETTINGS.h  TYPES.h  pcg_solver.cpp
src/datastructure/: KDTree.cpp  KDTree.h  SeparatorTree.cpp  SeparatorTree.h  ThreadSpecificData.cpp  ThreadSpecificData.h  WorkspaceManager.cpp  WorkspaceManager.h
src/geometry/: BoundingBox.h  FiniteDifference.cpp  FiniteDifference.h
src/library_interface/: CHOLMOD_Environment.cpp  CHOLMOD_Environment.h  CHOLMOD_Supernodal.cpp  CHOLMOD_Supernodal.h  CSparse_Interface.cpp  CSparse_Interface.h
src/linearalgebra/: .PCG_SOLVER.cpp.swp  .PCG_SOLVER.h.swp  DenseBlock.h  MATRIX.h  MATRIX3.cpp  MATRIX3.h  MATRIX_FAST.cpp  PCG_SOLVER.cpp  PCG_SOLVER.h  PRECONDITIONER.h  SPARSE_MATRIX.cpp  SPARSE_MATRIX.h  VEC3.h  VECTOR.h  VECTOR_FAST.cpp
src/mesh/: FaceMap.cpp  FaceMap.h  IsoHexElement.cpp  IsoHexElement.h  LinearElement.cpp  LinearElement.h  Mesh.cpp  Mesh.h  MeshReader.cpp  MeshReader.h
src/node/: .Supernode.cpp.swp  .Supernode.h.swp  DiagonalBlock.cpp  DiagonalBlock.h  Supernode.cpp  Supernode.h
src/ordering/: MinimumDegree.cpp  MinimumDegree.h  NestedDissection.cpp  NestedDissection.h  Ordering.cpp  Ordering.h
src/python/: CMakeLists.txt  build.sh  build.sh.in  pcg_pysolver.cpp  pcg_pysolver.h  rchol.pyx  rschol.pyx  setup.py  setup.py.in
src/rschol/: SETTINGS.h  TYPES.h  config.h.in
src/rschol/datastructure/: KDTree.cpp  KDTree.h  SeparatorTree.cpp  SeparatorTree.h  ThreadSpecificData.cpp  ThreadSpecificData.h  WorkspaceManager.cpp  WorkspaceManager.h
src/rschol/geometry/: BoundingBox.h  FiniteDifference.cpp  FiniteDifference.h
src/rschol/library_interface/: CHOLMOD_Environment.cpp  CHOLMOD_Environment.h  CHOLMOD_Supernodal.cpp  CHOLMOD_Supernodal.h  CSparse_Interface.cpp  CSparse_Interface.h
src/rschol/linearalgebra/: DenseBlock.h  MATRIX.h  MATRIX3.cpp  MATRIX3.h  MATRIX_FAST.cpp  PCG_SOLVER.cpp  PCG_SOLVER.h  PRECONDITIONER.h  SPARSE_MATRIX.cpp  SPARSE_MATRIX.h  VEC3.h  VECTOR.h  VECTOR_FAST.cpp
src/rschol/mesh/: FaceMap.cpp  FaceMap.h  IsoHexElement.cpp  IsoHexElement.h  LinearElement.cpp  LinearElement.h  Mesh.cpp  Mesh.h  MeshReader.cpp  MeshReader.h
src/rschol/node/: DiagonalBlock.cpp  DiagonalBlock.h  Supernode.cpp  Supernode.h
src/rschol/ordering/: MinimumDegree.cpp  MinimumDegree.h  NestedDissection.cpp  NestedDissection.h  Ordering.cpp  Ordering.h
src/rschol/solver/: FactorManager.cpp  FactorManager.h  FactorPreconditioner.cpp  FactorPreconditioner.h  SolverError.cpp  SolverError.h  SparseSolver.cpp  SparseSolver.h
src/rschol/util/: Evaluator.h  IO.h  MERSENNETWISTER.h  MathUtil.cpp  MathUtil.h  STLUtil.h  StatsCounter.cpp  StatsCounter.h  timer.h  trace.h
src/solver/: .FactorManager.cpp.swp  .FactorManager.h.swp  .FactorPreconditioner.cpp.swp  .FactorPreconditioner.h.swp  .SparseSolver.cpp.swp  .SparseSolver.h.swp  FactorManager.cpp  FactorManager.h  FactorPreconditioner.cpp  FactorPreconditioner.h  SolverError.cpp  SolverError.h  SparseSolver.cpp  SparseSolver.h
src/util/: .timer.h.swp  Evaluator.h  IO.h  MathUtil.cpp  MathUtil.h  STLUtil.h  StatsCounter.cpp  StatsCounter.h  timer.h
work/matrices/: Makefile  pac.txt  runner.py  translate.py
work/matrices/1138_BUS/: translate.py
work/matrices/Flan_1565/: convert.m  run_solve.py  write_vector.m
